--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "vendor/Alert"]
-	path = vendor/Alert
+[submodule "lib/Alert"]
+	path = lib/Alert
 	url = git@github.com:/rdlowrey/Alert.git
-[submodule "vendor/LibDNS"]
-	path = vendor/LibDNS
+[submodule "lib/LibDNS"]
+	path = lib/LibDNS
 	url = git@github.com:/DaveRandom/LibDNS.git
